resonsive overlap fixes, reduce pixel size of photo

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -719,8 +719,8 @@ span{
     text-align: center;
     font-size: 100%;
     position: relative;
-    padding-top: 10%;
-    padding-left: 50%;
+    padding-top: 14%;
+    padding-left: 55%;
 }
 
 @media only screen and (max-width: 1125px){
@@ -817,7 +817,7 @@ span{
         font-size: 75%;
     }
     #getwordout{
-        margin-top: 112%;
+        margin-top: 11s%;
     }
     #leadheader{
         padding-bottom: 12%;
@@ -878,11 +878,11 @@ span{
 }
 @media only screen and (max-width: 992px) { 
     #trackparagraph{
-        margin-left: 3%;
+        margin-left: 1%;
         margin-top: 6%;
     }
     #trackphoto{
-        margin-right: 1%;
+        margin-right: 0.5%;
     }
     #track{
         min-height: 520px;
